--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,12 +12,12 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest
+    runs-on: macos-13
 
     steps:
     - uses: actions/checkout@v3
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode_15.0.app
     - name: Build and test
-      run: xcodebuild clean build test -workspace App/QuizApp.xcworkspace -scheme "CI" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 15 Pro" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
+      run: xcodebuild clean build test -workspace QuizApp/QuizApp.xcworkspace -scheme "CI" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 15 Pro" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
 
